internal/xds/translator/testdata/out/xds-ir/btp-telemetry.routes.yaml
- ignorePortInHostMatching: true
  name: envoy-gateway/gateway-1/http
  virtualHosts:
  - domains:
    - gateway.envoyproxy.io
    metadata:
      filterMetadata:
        envoy-gateway:
          resources:
          - kind: Gateway
            name: gateway-1
            namespace: envoy-gateway
            sectionName: http
    name: envoy-gateway/gateway-1/http/gateway_envoyproxy_io
    routes:
    - match:
        prefix: /
      metadata:
        filterMetadata:
          envoy-gateway:
            resources:
            - kind: HTTPRoute
              name: httproute-1
              namespace: default
      name: httproute/default/httproute-1/rule/0/match/0/gateway_envoyproxy_io
      route:
        cluster: httproute/default/httproute-1/rule/0
        upgradeConfigs:
        - upgradeType: websocket
      tracing:
        clientSampling:
          numerator: 2
        customTags:
        - environment:
            defaultValue: '-'
            name: env1
          tag: env1
        - literal:
            value: value1
          tag: literal1
        - requestHeader:
            defaultValue: '-'
            name: X-Request-Id
          tag: req1
        overallSampling:
          numerator: 3
        randomSampling:
          numerator: 1
